# DigifizReplica

./: .gitignore  COLOR_SCHEMES.md  LICENSE.txt  README.md
.github/workflows/: build_digifiz_next.yml  build_legacy_arduino.yml  build_main.yml  build_refiz.yml  build_slcd_dr_ctl.yml  deploy_releases.yml  legacy_arduino.yml  main.yml
A2560_BoardR2/Digifiz/: Digifiz.ino  LCD_VARIO_mapping.h  LX_Lcd_Vario.cpp  LX_Lcd_Vario.h  MD_MAX72xx.cpp  MD_MAX72xx.h  MD_MAX72xx_lib.h  MS5611.cpp  MS5611.h  MedianDispertionFilter.cpp  PinChangeInterruptSettings.h  STLED316S.cpp  STLED316S.h  adc.cpp  adc.h  audi_display.cpp  audi_display.h  audi_red_display.cpp  audi_red_display.h  buzzer.cpp  buzzer.h  display.cpp  display.h  emegrency.cpp  emergency.h  ext_eeprom.cpp  ext_eeprom.h  fuel_pressure.cpp  fuel_pressure.h  lcd_display.cpp  lcd_display.h  mfa.cpp  mfa.h  orig_display.cpp  orig_display.h  params.cpp  params.h  params_list.h  protocol.cpp  protocol.h  (+20 more)
A2560_BoardR2/Digifiz_reset/: fuses.bat
A2560_BoardR2/LightAll/: LightAll.ino  display.cpp  display.h  flash.bat
A2560_BoardR2/LightAllAudi/: LightAllAudi.ino  audi_display.h
A2560_BoardR2/LightAllAudiGreen/: LightAllAudi.ino  STLED316S.cpp  audi_display.cpp  audi_display.h
A2560_BoardR2/LightAllAudiRed/: LightAllAudiRed.ino  STLED316S.cpp  STLED316S.h  audi_display.cpp  audi_display.h
A2560_BoardR2/Scanner/: scanner.ino
A2560_BoardR2/TestBoard/: TestBoard.ino
A2560_BoardR2/flash_scripts/: FLASHING.md  dump_eeprom.bat  flash.bat  update.bat
Arduino/DS3231_set/: DS3231_set.ino
Arduino/Digifiz/: Digifiz.ino  MedianDispertionFilter.h  adc.cpp  adc.h  buzzer.h  display.cpp  display.h  eeprom.cpp  eeprom.h  emegrency.cpp  emergency.h  ext_eeprom.cpp  ext_eeprom.h  mfa.cpp  mfa.h  orig_display.cpp  orig_display.h  protocol.cpp  protocol.h  setup.h  speedometer.cpp  speedometer.h  tacho.cpp  tacho.h
ESP32/Digifiz/: CMakeLists.txt  MIGRATION.md  README.md  partitions.csv  partitions_new.csv  sdkconfig  sdkconfig_new
ESP32/Digifiz/components/nvs_wifi_connect/: CMakeLists.txt  Kconfig.projbuild  README.md
ESP32/Digifiz/components/nvs_wifi_connect/include/: nvs_wifi_connect.h
ESP32/Digifiz/components/nvs_wifi_connect/private_include/: nvs_wifi_connect_private.h
ESP32/Digifiz/components/nvs_wifi_connect/source/: nvs_wifi_connect.c  nvs_wifi_connect_max.html
ESP32/Digifiz/components/xparam/: CMakeLists.txt  xparam.c  xparam.h
ESP32/Digifiz/main/: CMakeLists.txt  adc.c  adc.h  ble_module.c  ble_module.h  buzzer.c  buzzer.h  compress_files.py  crc8.c  crc8.h  device_sleep.c  device_sleep.h  digifiz_time.c  digifiz_time.h  digifiz_watchdog.c  digifiz_watchdog.h  digifiz_wifi_connect.c  digifiz_ws_connect.html  digifiz_ws_server.c  digifiz_ws_server.h  display_next.c  display_next.h  display_refiz.c  ecu_data.h  emegrency.c  emergency.h  frequency_count.c  frequency_count.h  fuel_pressure.c  fuel_pressure.h  gear_estimator.c  gear_estimator.h  idf_component.yml  kline.c  kline.h  led_effects.c  led_effects.h  main.c  mfa.c  mfa.h  (+23 more)
ESP32/Digifiz/main/data/: digifiz_ws_connect.html
ESP32/Digifiz/migration_app/: CMakeLists.txt  migration.html  partitions.csv  sdkconfig.defaults
ESP32/Digifiz/migration_app/main/: CMakeLists.txt  migration_main.c
ESP32/Digifiz/nvs_wifi_connect/: Kconfig.projbuild  README-RU.md
ESP32/Digifiz/tools/: plot_oscilloscope_dump.py
Releases/: README.md
Releases/AudiGreen/: AudiGreen.hex  flash.bat
Releases/AudiRed/: AudiRed.hex  flash.bat
Releases/DigifizReplica/GACT_GART_GACS_GARS_7K/: Digifiz7K.hex  flash.bat
Releases/DigifizReplica/GACT_GART_GACS_GARS_8K/: Digifiz8K.hex  flash.bat
Releases/DigifizReplica/GACT_GART_GACS_GARS_8K_UK/: Digifiz_8K_UK.hex  flash.bat
Releases/DigifizReplica/GACT_GART_GACS_GARS_8K_USA/: Digifiz_8K_USA.hex  flash.bat
Releases/LCD/: DigifizLCD_UIOD.hex  flash.bat
SLCD_DR_Ctl/: PROTOCOL.md  SLCD_DR_Ctl.ino  config.h  crc8.py  pattern_sender.cpp  pattern_sender.h  payload_sender_pyqt5.py  serial_protocol.cpp  serial_protocol.h
flash_scripts/: flash.bat
scripts/: build_arduino.sh
tests/: CMakeLists.txt  catch.hpp  rpm_filter_test.cpp
(+4 files in other folders)
